still trying to fix boxes not fitting mobile after push

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ section h2 {
 .main-slide-img {
     border: solid;
     border-color: black;
-    width: 800px;
+    width: 790px;
     height: 500px;
 
 }
@@ -198,7 +198,7 @@ section h2 {
 .slide-img {
     border: solid;
     border-color: black;
-    width: 390px;
+    width: 380px;
     height: 242px;
 }
 
